Fix alignment in menu bar

--- a/client/src/components/icons.css
+++ b/client/src/components/icons.css
@@ -2,6 +2,7 @@
     margin: 10px;
     right: 1%;
     display: flex;
+    align-items: center;
 }
 
 #save {
@@ -16,4 +17,7 @@
     font-size: 2.5em;
     color: white;
     cursor: pointer;
+}
+#mode {
+    
 }
